# parkhaus-simulation

./: .gitignore  CMakeLists.txt  README.md  Rueckblick.md  ausgabe_format.md  main_loop.md  statistics-definition.md  statistics.c  statistics.h
docs/: ausgabe_format.md  exit_codes.md  statistics_output_timestep.drawio
flowcharts/drawio/: input_valid_seed.drawio  remove_due_cars.drawio
inc/: car.h  car_queue.h  exit_codes.h  parking_lot.h  parse_num.h  sim_data.h  simulation.h  statistics.h  test_utils.h  user_input.h  util.h
src/: car.c  car_queue.c  main.c  parking_lot.c  parse_num.c  simulation.c  statistics.c  test_utils.c  user_input.c  util.c
tests/: test_car.c  test_car_queue.c  test_parking_lot.c  test_parse_num.c  test_simulation.c  test_statistics.c  test_util.c
